# mysql_ch_replicator

./: .gitignore  CLAUDE.md  DOCUMENTATION_INDEX.md  Dockerfile  LICENSE  PARALLEL_TESTING.md  README.md  SUBPROCESS_ISOLATION_SOLUTION.md  TESTING_GUIDE.md  TESTING_HISTORY.md  TEST_ANALYSIS_SEPTEMBER_2025.md  TODO.md  binlog_replicator.py  clickhouse_api.py  config-tests.yaml  config.py  conftest.py  converter.py  db_replicator.py  docker-compose-tests.yaml  example_config.yaml  main.py  monitoring.py  mysql_api.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-pypy.txt  requirements.txt  run_tests.sh  runner.py  table_structure.py  test-report.html  test-results.xml  test_mariadb.cnf  test_mysql.cnf  test_mysql_ch_replicator.py  tests_config.yaml  tests_config_cluster.yaml  tests_config_databases_tables.yaml  (+6 more)
.cursor/rules/: rules.mdc
.github/: RELEASE_NOTES_v0.0.87.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: release.yaml  tests.yaml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  tasks.json
binlog_json_parser/: .gitignore  CMakeLists.txt  Dockerfile  big_endian.h  build_static.sh  little_endian.h  main.cpp  my_byteorder.h  mysql_json_parser.cpp  mysql_json_parser.h  mysqljsonparse.cpp
mysql_ch_replicator/: .gitignore  __init__.py  __main__.py  binlog_recovery.py  binlog_replicator.py  clickhouse_api.py  common.py  config.py  connection_pool.py  converter.py  converter_enum_parser.py  db_optimizer.py  db_replicator.py  db_replicator_initial.py  db_replicator_realtime.py  main.py  monitoring.py  mysql_api.py  runner.py  table_structure.py  test_mysql_ch_replicator.py  utils.py
mysql_ch_replicator/enum/: __init__.py  converter.py  ddl_parser.py  parser.py  utils.py
mysql_ch_replicator/pymysqlreplication/: binlogstream.py  cpp_accelerated.py  event.py  json_binary.py  libmysqljsonparse.dylib  packet.py  row_event.py
pymysqlreplication/: packet.py
tests/: CLAUDE.md  README.md  common.py  conftest.py  docker-compose-tests.yaml  test_config_env_vars.py  test_data_types.py  test_ddl_operations.py  test_e2e_integration.py  test_issue_209.py  test_multi_mysql_single_ch.py  test_mysql.cnf  test_mysql_ch_replicator.py  test_null_value_handling.py  test_performance.py  test_split_high_level.py  test_strip_comments.py  test_target_tables.py  test_truncate_bug.py  tests_config.yaml  tests_config_charset.yaml  tests_config_db_mapping.yaml  tests_config_env_vars.yaml  tests_config_env_vars_no_creds.yaml  tests_config_ignore_deletes.yaml  tests_config_mariadb.yaml  tests_config_multi_mysql_single_ch.yaml  tests_config_parallel.yaml  tests_config_perf.yaml  tests_config_perf_parallel.yaml  tests_config_post_commands.yaml  tests_config_skip_initial_replication.yaml  tests_config_string_primary_key.yaml  tests_config_target_tables.yaml  tests_config_timezone.yaml  tests_config_truncate_bug.yaml  tests_override.xml
tests/base/: __init__.py  base_replication_test.py  configuration_test_examples.py  data_test_mixin.py  enhanced_configuration_test.py  isolated_base_replication_test.py  schema_test_mixin.py
tests/configs/docker/: test_mariadb.cnf  test_mysql.cnf  test_percona.cnf
tests/configs/replicator/: tests_config.yaml  tests_config_databases_tables.yaml  tests_config_db_mapping.yaml  tests_config_dynamic_column.yaml  tests_config_isolated_example.yaml  tests_config_mariadb.yaml  tests_config_parallel.yaml  tests_config_percona.yaml  tests_config_string_primary_key.yaml
tests/examples/: example_test_usage.py
tests/fixtures/: __init__.py  advanced_dynamic_generator.py  assertions.py  data_factory.py  dynamic_generator.py  schema_factory.py  table_schemas.py  test_data.py
tests/integration/: test_advanced_process_management.py  test_advanced_replication.py  test_basic_data_types.py  test_basic_replication.py  test_binlog_isolation_verification.py  test_configuration_scenarios.py  test_data_types.py  test_dynamic_database_isolation.py  test_high_throughput_dynamic.py  test_parallel_initial_replication.py  test_parallel_worker_scenarios.py  test_replication_edge_cases.py  test_schema_evolution.py  test_special_cases.py
tests/integration/data_integrity/: __init__.py  test_corruption_detection.py  test_data_consistency.py  test_duplicate_detection.py  test_ordering_guarantees.py  test_referential_integrity.py
tests/integration/data_types/: __init__.py  test_advanced_data_types.py  test_basic_data_types.py  test_binary_padding.py  test_boolean_bit_types.py  test_comprehensive_data_types.py  test_datetime_defaults.py  test_datetime_replication.py  test_datetime_types.py  test_enum_normalization.py  test_json_comprehensive.py  test_json_data_types.py  test_json_unicode_keys.py  test_null_value_handling.py  test_numeric_boundary_limits.py  test_numeric_comprehensive.py  test_polygon_type.py  test_text_blob_types.py  test_unsigned_numeric_limits.py  test_year_type.py
tests/integration/ddl/: __init__.py  test_advanced_ddl_operations.py  test_column_management.py  test_conditional_ddl_operations.py  test_create_table_like.py  test_ddl_operations.py  test_if_exists_ddl.py  test_multi_alter_statements.py  test_percona_migration.py  test_percona_migration_scenarios.py
tests/integration/dynamic/: __init__.py  test_dynamic_data_scenarios.py  test_property_based_scenarios.py
tests/integration/percona/: CLAUDE.md  (+2 more)
tests/performance/: test_performance.py
tests/unit/: test_connection_pooling.py  test_decimal_conversion.py
tests/utils/: __init__.py  config_test_migration_guide.md  dynamic_config.py  mysql_test_api.py  test_id_manager.py  test_utility_functions.py
tools/: infrastructure_rollback.py  test_monitor.py  test_pattern_validator.py
(+26 files in other folders)
