[tool.poetry]
name = "mysql-ch-replicator"
version = "0.0.35"
description = "Tool for replication of MySQL databases to ClickHouse"
authors = ["Filipp Ozinov <filipp@bakanov.su>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = ">= 5.0.1"
pyparsing = ">= 3.0.8"
clickhouse-connect = ">= 0.7.8"
mysql-connector-python = ">= 8.3.0"
pymysql = ">= 1.0.0"
packaging = ">= 21.3"
sqlparse = ">= 0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mysql_ch_replicator = 'mysql_ch_replicator:main'
